# OpenSkillEval

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_configs/: README.md
agent_configs/snippets/: claude-code-ds.snippet  claude-code-glm.snippet  claude-code-minimax.snippet  claude-code.snippet  codex.snippet  gemini-cli.snippet  judge.snippet  kimi-cli.snippet
agents/: README.md  claude_code_ds.py  claude_code_glm.py  claude_code_minimax.py
entries/: data-visualization.txt  poster-generation.txt  ppt-generation.txt  report-generation.txt  web-design.txt
eval/dataviz-eval/: README.md
eval/dataviz-eval/code/: vlm_judge_ext.py
eval/dataviz-eval/scripts/: judge_dataviz.sh  pipeline.py  stage1_eval_agent.sh
eval/poster-eval/: README.md
eval/poster-eval/code/: vlm_judge_ext.py
eval/poster-eval/scripts/: judge_poster.sh  pipeline.py
eval/ppt-eval/: README.md
eval/ppt-eval/code/: vlm_judge_ext.py
eval/ppt-eval/code/mac_code/: convert.sh
eval/ppt-eval/scripts/: pipeline.py  stage1_pack.sh
eval/report-eval/: README.md
eval/report-eval/code/: vlm_judge_ext.py
eval/report-eval/scripts/: judge_single.sh  pipeline.py  stage1_eval_agent.sh
eval/webdesign-eval/: README.md
eval/webdesign-eval/code/: vlm_judge_ext.py
eval/webdesign-eval/scripts/: judge_single.sh  pipeline.py  stage1_eval_agent.sh
scripts/: download_cases.py
tasks/data-visualization/scripts/evaluation/: instruction.md  task.toml
tasks/data-visualization/shared/harness/: solve.sh  (+1 more)
tasks/scripts/: load_case_to_dir.sh
tools/runner/: README.md  run_variants.py
(+111 files in other folders)
